--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": ">=20.13.1"
+  },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.5",
+    "@wagmi/core": "2.13.0",
+    "ethers": "^6.15.0",
+    "next": "15.5.6",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "siwe": "^3.0.0",
+    "viem": "2.12.0",
+    "wagmi": "2.12.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
